--- a/lab/MailCat/MailCatCloud/cloud/views/template.html
+++ b/lab/MailCat/MailCatCloud/cloud/views/template.html
@@ -59,7 +59,7 @@
       {{receiverName}}:
     </p>
     <p style="margin-top: 0; font-size: 15px !important; color: #60666d; font-family: sans-serif; line-height: 24px !important; margin-bottom: 24px !important;">
-      &nbsp &nbsp {{clipBody}} ...
+     {{clipBody}} ...
     </p>
   </div>
 
